<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.result.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:title="@string/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/roundedImage"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:contentDescription="@string/imgResult"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/avatars"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/result"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/inference_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/inference"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/btnSave"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            />
    </LinearLayout>
</ScrollView>